UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_911_Option_Details__c/ftr_911_Option_Details__c.object-meta.xml
<CustomObject>
    <label>911 Option Details</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>911 Option Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>