UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_911_Option_Details__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <formula>PremisesId__r.vlocity_cmt__City__c</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>