UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_911_Option_Details__c/fields/DIDLocationDetailsId__c.field-meta.xml
<CustomField>
    <fullName>DIDLocationDetailsId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DID Location Details</label>
    <referenceTo>ftr_DID_Location_Details__c</referenceTo>
    <relationshipLabel>911 Option Details</relationshipLabel>
    <relationshipName>X911_Option_Details</relationshipName>
    <type>Lookup</type>
</CustomField>