UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_911_Option_Details__c/fields/FTR_911_Provider__c.field-meta.xml
<CustomField>
    <fullName>FTR_911_Provider__c</fullName>
    <label>FTR 911 Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>