UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_911_Option_Details__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <label>911 Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main Designated #</fullName>
            </value>
            <value>
                <fullName>ELIN/ERL</fullName>
            </value>
            <value>
                <fullName>PS/ALI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>