UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_911_Option_Details__c/fields/PremisesId__c.field-meta.xml
<CustomField>
    <fullName>PremisesId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premises</label>
    <referenceTo>vlocity_cmt__Premises__c</referenceTo>
    <relationshipLabel>911 Option Details</relationshipLabel>
    <relationshipName>X911_Option_Details</relationshipName>
    <type>Lookup</type>
</CustomField>