UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_911_Option_Details__c/fields/StreetAddress__c.field-meta.xml
<CustomField>
    <fullName>StreetAddress__c</fullName>
    <formula>PremisesId__r.vlocity_cmt__StreetAddress__c</formula>
    <label>Street Address</label>
    <type>Text</type>
</CustomField>